# mathm-im-already-raytracer

./: Cargo.toml  README.md
image-gen/: Cargo.toml
image-gen/src/: main.rs
raytracer/: Cargo.toml
raytracer/src/: camera.rs  cornellbox.rs  error.rs  image.rs  lib.rs  lights.rs  material.rs  presets.rs  render.rs  shapes.rs  world.rs
real-time/: Cargo.toml
real-time/src/: main.rs
src/: camera.rs  error.rs  image.rs  lib.rs  main.rs  material.rs  pixel.rs  shapes.rs  world.rs
web-demo/: Cargo.toml  Makefile
web-demo/src/: main.rs
web-demo/www/: index.html  web-demo.js  web-demo_bg.wasm
