[package]
name = "im-already-raytracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["parallel"]
parallel = []

[dependencies]
vek = { version = "0.15", features = ["repr_simd"] }
crossbeam = "0.8"
rand = "0.8"
rand_distr = "0.4"
