[package]
name = "real-time"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
im-already-raytracer = { path = "../raytracer" }
bevy = { version = "0.6", default-features = false, features = ["bevy_winit", "x11"] }
bevy_pixels = "0.3"
